src/test/compile-fail/use-uninit-dtor.rs
// error-pattern:Unsatisfied precondition

fn main() {
    obj foo(x: int) {drop { let baz: int; log baz; } }
    fail;
}